# financial-analysis

./: .env.example  .gitignore  Cargo.toml  Quickstart  README.md  SCOPE_RUST.md  pyproject.toml
docs/: index.html
financial_analysis/: __main__.py  analyst.py  archive.py  config.py  filing_parser.py  models.py  utils.py
src/: app.rs  config.rs  lib.rs  main.rs  models.rs  utils.rs
src/models/: common.rs  finance.rs  mod.rs
tests/: test_accuracy.py  verify_net_income.rs
